--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kirsten Hugh
-#logo: /assets/img/headshot_circle.png add a picture to the top
+logo: /images/Headshot KH.jpg
 description: <a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
 show_downloads: true
 theme: jekyll-theme-minimal
