--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
 title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
 description: <a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
+Education
+- **University of Florida** (_December 2023_)
+  - *M.S., Information Systems and Operations Management* 
+    - Data Science Track
+- **University of Florida** (_May 2022_)
+  - *B.S., Business Administration, Information Systems*
+    - Asian Studies Minor
+    - Full-Ride Machen Florida Opportunity Scholarship 
+    & Bright Futures Academic Scholarship Recipient
 theme: jekyll-theme-minimal
