--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
 title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
-description: Education
+description: > Education
 - **University of Florida** (_December 2023_)
   - *M.S., Information Systems and Operations Management* 
     - Data Science Track
+    <br><br>
 - **University of Florida** (_May 2022_)
   - *B.S., Business Administration, Information Systems*
     - Asian Studies Minor
     - Full-Ride Machen Florida Opportunity Scholarship 
     & Bright Futures Academic Scholarship Recipient
+    <br><br>
     <a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
 
 theme: jekyll-theme-minimal
