--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
 description: > Education
-- **University of Florida** (_December 2023_)
+- **University of Florida** (December 2023)
   - *M.S., Information Systems and Operations Management* 
     - Data Science Track
     <br><br>
-- **University of Florida** (_May 2022_)
+- **University of Florida** (May 2022)
   - *B.S., Business Administration, Information Systems*
     - Asian Studies Minor
     - Full-Ride Machen Florida Opportunity Scholarship 
