--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@ title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
 description: > Education
 - **University of Florida** (December 2023)
-  - *M.S., Information Systems and Operations Management* 
+  - M.S., Information Systems and Operations Management
     - Data Science Track
     <br><br>
 - **University of Florida** (May 2022)
-  - *B.S., Business Administration, Information Systems*
+  - B.S., Business Administration, Information Systems
     - Asian Studies Minor
     - Full-Ride Machen Florida Opportunity Scholarship 
     & Bright Futures Academic Scholarship Recipient
