--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,13 @@
 title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
-description: > Education
-- **University of Florida** (December 2023)
-  - M.S., Information Systems and Operations Management
-    - Data Science Track
-    <br><br>
-- **University of Florida** (May 2022)
-  - B.S., Business Administration, Information Systems
-    - Asian Studies Minor
-    - Full-Ride Machen Florida Opportunity Scholarship 
-    & Bright Futures Academic Scholarship Recipient
-    <br><br>
-    <a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
-
+description: Education
+University of Florida (December 2023)
+M.S., Information Systems and Operations Management Data Science Track
+<br><br>
+University of Florida (May 2022)
+B.S., Business Administration, Information Systems
+Asian Studies Minor
+Full-Ride Machen Florida Opportunity Scholarship & Bright Futures Academic Scholarship Recipient
+<br><br>
+<a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
 theme: jekyll-theme-minimal
