--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
 title: Kirsten Hugh
 logo: /images/Headshot KH.jpg
-description: Education: <br> University of Florida (December 2023) <br> M.S., Information Systems and Operations Management <br> Data Science Track
-<br><br>
-University of Florida (May 2022) <br> B.S., Business Administration, Information Systems <br> Asian Studies Minor <br> Full-Ride Machen Florida Opportunity Scholarship & Bright Futures Academic Scholarship Recipient
-<br><br>
-<a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
+description: Education: <br> University of Florida (December 2023) <br> M.S., Information Systems and Operations Management <br> Data Science Track <br><br> University of Florida (May 2022) <br> B.S., Business Administration, Information Systems <br> Asian Studies Minor <br> Full-Ride Machen Florida Opportunity Scholarship & Bright Futures Academic Scholarship Recipient <br><br> <a href="https://www.linkedin.com/in/kirsten-hugh/">View My LinkedIn</a>
 theme: jekyll-theme-minimal
